# SilverPlate

./: Cargo.toml  README.md
asyncbin/src/: lib.rs  main.rs
asynclib/: COPYRIGHT  Cargo.toml
asynclib/src/: lib.rs
binary/: .gitignore
binary/src/: lib.rs
